grammar/AdaParser.py
# Generated from Ada.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AdaParser ( Parser ):

    grammarFileName = "Ada.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'else'", "<INVALID>", 
                     "'loop'", "<INVALID>", "'exit'", "'type'", "'is'", 
                     "'end'", "'record'", "'array'", "'of'", "'range'", 
                     "'to'", "'not'", "'return'", "'procedure'", "'integer'", 
                     "'float'", "'character'", "'boolean'", "':='", "';'", 
                     "'+'", "'-'", "'*'", "'/'", "'mod'", "'('", "')'", 
                     "','", "':'", "'..'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'and'", "'or'", 
                     "'='", "'/='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSE", "END_IF", "LOOP", 
                      "END_LOOP", "EXIT", "TYPE", "IS", "END", "RECORD", 
                      "ARRAY", "OF", "RANGE", "TO", "NOT", "RETURN", "PROCEDURE", 
                      "INTEGER", "FLOAT", "CHARACTER", "BOOLEAN", "ASSIGN", 
                      "SEMI", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MOD", 
                      "LPAREN", "RPAREN", "COMMA", "COLON", "DOT_DOT", "ID", 
                      "INT", "FLOAT_LITERAL", "CHAR", "STRING", "BOOL_LITERAL", 
                      "AND", "OR", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
                      "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_assignment = 2
    RULE_if_stmt = 3
    RULE_loop_stmt = 4
    RULE_exit_stmt = 5
    RULE_return_stmt = 6
    RULE_proc_call = 7
    RULE_proc_def = 8
    RULE_param = 9
    RULE_param_type = 10
    RULE_type_def = 11
    RULE_type_decl = 12
    RULE_scalar_type = 13
    RULE_array_type = 14
    RULE_index_spec = 15
    RULE_discrete_range = 16
    RULE_expr = 17
    RULE_term = 18
    RULE_factor = 19
    RULE_bool_expr = 20
    RULE_bool_term = 21
    RULE_bool_factor = 22

    ruleNames =  [ "prog", "stmt", "assignment", "if_stmt", "loop_stmt", 
                   "exit_stmt", "return_stmt", "proc_call", "proc_def", 
                   "param", "param_type", "type_def", "type_decl", "scalar_type", 
                   "array_type", "index_spec", "discrete_range", "expr", 
                   "term", "factor", "bool_expr", "bool_term", "bool_factor" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSE=3
    END_IF=4
    LOOP=5
    END_LOOP=6
    EXIT=7
    TYPE=8
    IS=9
    END=10
    RECORD=11
    ARRAY=12
    OF=13
    RANGE=14
    TO=15
    NOT=16
    RETURN=17
    PROCEDURE=18
    INTEGER=19
    FLOAT=20
    CHARACTER=21
    BOOLEAN=22
    ASSIGN=23
    SEMI=24
    PLUS=25
    MINUS=26
    MULTIPLY=27
    DIVIDE=28
    MOD=29
    LPAREN=30
    RPAREN=31
    COMMA=32
    COLON=33
    DOT_DOT=34
    ID=35
    INT=36
    FLOAT_LITERAL=37
    CHAR=38
    STRING=39
    BOOL_LITERAL=40
    AND=41
    OR=42
    EQ=43
    NEQ=44
    LT=45
    LTE=46
    GT=47
    GTE=48
    WS=49
    COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.StmtContext)
            else:
                return self.getTypedRuleContext(AdaParser.StmtContext,i)


        def getRuleIndex(self):
            return AdaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = AdaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360131746) != 0):
                self.state = 46
                self.stmt()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(AdaParser.AssignmentContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(AdaParser.If_stmtContext,0)


        def loop_stmt(self):
            return self.getTypedRuleContext(AdaParser.Loop_stmtContext,0)


        def exit_stmt(self):
            return self.getTypedRuleContext(AdaParser.Exit_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(AdaParser.Return_stmtContext,0)


        def proc_call(self):
            return self.getTypedRuleContext(AdaParser.Proc_callContext,0)


        def proc_def(self):
            return self.getTypedRuleContext(AdaParser.Proc_defContext,0)


        def getRuleIndex(self):
            return AdaParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = AdaParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.loop_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.exit_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.return_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.proc_call()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.proc_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AdaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AdaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AdaParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(AdaParser.SEMI, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = AdaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(AdaParser.ID)
            self.state = 62
            self.match(AdaParser.ASSIGN)
            self.state = 63
            self.expr()
            self.state = 64
            self.match(AdaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(AdaParser.IF, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(AdaParser.Bool_exprContext,0)


        def THEN(self):
            return self.getToken(AdaParser.THEN, 0)

        def END_IF(self):
            return self.getToken(AdaParser.END_IF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.StmtContext)
            else:
                return self.getTypedRuleContext(AdaParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(AdaParser.ELSE, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = AdaParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(AdaParser.IF)
            self.state = 67
            self.bool_expr()
            self.state = 68
            self.match(AdaParser.THEN)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360131746) != 0):
                self.state = 69
                self.stmt()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 75
                self.match(AdaParser.ELSE)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360131746) != 0):
                    self.state = 76
                    self.stmt()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 84
            self.match(AdaParser.END_IF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self):
            return self.getToken(AdaParser.LOOP, 0)

        def END_LOOP(self):
            return self.getToken(AdaParser.END_LOOP, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.StmtContext)
            else:
                return self.getTypedRuleContext(AdaParser.StmtContext,i)


        def getRuleIndex(self):
            return AdaParser.RULE_loop_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_stmt" ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_stmt" ):
                listener.exitLoop_stmt(self)




    def loop_stmt(self):

        localctx = AdaParser.Loop_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_loop_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(AdaParser.LOOP)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360131746) != 0):
                self.state = 87
                self.stmt()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(AdaParser.END_LOOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXIT(self):
            return self.getToken(AdaParser.EXIT, 0)

        def SEMI(self):
            return self.getToken(AdaParser.SEMI, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_exit_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit_stmt" ):
                listener.enterExit_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit_stmt" ):
                listener.exitExit_stmt(self)




    def exit_stmt(self):

        localctx = AdaParser.Exit_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exit_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(AdaParser.EXIT)
            self.state = 96
            self.match(AdaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(AdaParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(AdaParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(AdaParser.SEMI, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)




    def return_stmt(self):

        localctx = AdaParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(AdaParser.RETURN)
            self.state = 99
            self.expr()
            self.state = 100
            self.match(AdaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proc_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AdaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(AdaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(AdaParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(AdaParser.SEMI, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AdaParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.COMMA)
            else:
                return self.getToken(AdaParser.COMMA, i)

        def getRuleIndex(self):
            return AdaParser.RULE_proc_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc_call" ):
                listener.enterProc_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc_call" ):
                listener.exitProc_call(self)




    def proc_call(self):

        localctx = AdaParser.Proc_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_proc_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(AdaParser.ID)
            self.state = 103
            self.match(AdaParser.LPAREN)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2165737324544) != 0):
                self.state = 104
                self.expr()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==32:
                    self.state = 105
                    self.match(AdaParser.COMMA)
                    self.state = 106
                    self.expr()
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 114
            self.match(AdaParser.RPAREN)
            self.state = 115
            self.match(AdaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proc_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(AdaParser.PROCEDURE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.ID)
            else:
                return self.getToken(AdaParser.ID, i)

        def IS(self):
            return self.getToken(AdaParser.IS, 0)

        def END(self):
            return self.getToken(AdaParser.END, 0)

        def SEMI(self):
            return self.getToken(AdaParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(AdaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(AdaParser.RPAREN, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.StmtContext)
            else:
                return self.getTypedRuleContext(AdaParser.StmtContext,i)


        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.ParamContext)
            else:
                return self.getTypedRuleContext(AdaParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.COMMA)
            else:
                return self.getToken(AdaParser.COMMA, i)

        def getRuleIndex(self):
            return AdaParser.RULE_proc_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc_def" ):
                listener.enterProc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc_def" ):
                listener.exitProc_def(self)




    def proc_def(self):

        localctx = AdaParser.Proc_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_proc_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(AdaParser.PROCEDURE)
            self.state = 118
            self.match(AdaParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 119
                self.match(AdaParser.LPAREN)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==35:
                    self.state = 120
                    self.param()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==32:
                        self.state = 121
                        self.match(AdaParser.COMMA)
                        self.state = 122
                        self.param()
                        self.state = 127
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 130
                self.match(AdaParser.RPAREN)


            self.state = 133
            self.match(AdaParser.IS)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360131746) != 0):
                self.state = 134
                self.stmt()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(AdaParser.END)
            self.state = 141
            self.match(AdaParser.ID)
            self.state = 142
            self.match(AdaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AdaParser.ID, 0)

        def COLON(self):
            return self.getToken(AdaParser.COLON, 0)

        def param_type(self):
            return self.getTypedRuleContext(AdaParser.Param_typeContext,0)


        def getRuleIndex(self):
            return AdaParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = AdaParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(AdaParser.ID)
            self.state = 145
            self.match(AdaParser.COLON)
            self.state = 146
            self.param_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(AdaParser.INTEGER, 0)

        def BOOLEAN(self):
            return self.getToken(AdaParser.BOOLEAN, 0)

        def FLOAT(self):
            return self.getToken(AdaParser.FLOAT, 0)

        def CHARACTER(self):
            return self.getToken(AdaParser.CHARACTER, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_param_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_type" ):
                listener.enterParam_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_type" ):
                listener.exitParam_type(self)




    def param_type(self):

        localctx = AdaParser.Param_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7864320) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(AdaParser.TYPE, 0)

        def ID(self):
            return self.getToken(AdaParser.ID, 0)

        def IS(self):
            return self.getToken(AdaParser.IS, 0)

        def type_decl(self):
            return self.getTypedRuleContext(AdaParser.Type_declContext,0)


        def SEMI(self):
            return self.getToken(AdaParser.SEMI, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_type_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_def" ):
                listener.enterType_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_def" ):
                listener.exitType_def(self)




    def type_def(self):

        localctx = AdaParser.Type_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_type_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(AdaParser.TYPE)
            self.state = 151
            self.match(AdaParser.ID)
            self.state = 152
            self.match(AdaParser.IS)
            self.state = 153
            self.type_decl()
            self.state = 154
            self.match(AdaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_type(self):
            return self.getTypedRuleContext(AdaParser.Scalar_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(AdaParser.Array_typeContext,0)


        def getRuleIndex(self):
            return AdaParser.RULE_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_decl" ):
                listener.enterType_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_decl" ):
                listener.exitType_decl(self)




    def type_decl(self):

        localctx = AdaParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_type_decl)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21, 22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.scalar_type()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(AdaParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(AdaParser.FLOAT, 0)

        def CHARACTER(self):
            return self.getToken(AdaParser.CHARACTER, 0)

        def BOOLEAN(self):
            return self.getToken(AdaParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_scalar_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScalar_type" ):
                listener.enterScalar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScalar_type" ):
                listener.exitScalar_type(self)




    def scalar_type(self):

        localctx = AdaParser.Scalar_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_scalar_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7864320) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(AdaParser.ARRAY, 0)

        def LPAREN(self):
            return self.getToken(AdaParser.LPAREN, 0)

        def index_spec(self):
            return self.getTypedRuleContext(AdaParser.Index_specContext,0)


        def RPAREN(self):
            return self.getToken(AdaParser.RPAREN, 0)

        def OF(self):
            return self.getToken(AdaParser.OF, 0)

        def type_decl(self):
            return self.getTypedRuleContext(AdaParser.Type_declContext,0)


        def getRuleIndex(self):
            return AdaParser.RULE_array_type
